--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "openai": "^4.53.2",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
